<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment1_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/checksum_et"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:hint="@string/inserisci_o_incolla_checksum"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/checksum_match_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checksum_calculated_tv" />

    <Button
        android:id="@+id/jsonExportButton"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="66dp"
        android:text="@string/confronta_checksum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checksum_match_tv" />

    <TextView
        android:id="@+id/checksum_calculated_tv"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:text="@string/checksum_calcolato"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/checksum_match_tv"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:textAlignment="textStart"
        android:textColor="#C51162"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/jsonExportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checksum_et" />

    <TextView
        android:id="@+id/file_selected_tv"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:text="@string/file_selezionato"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/file_name_tv"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:text="@string/seleziona_file"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_selected_tv"
        app:layout_constraintVertical_bias="0.001" />

    <Button
        android:id="@+id/calcola_checksum_button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/calcola_checksum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <ImageButton
        android:id="@+id/file_pick_button"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:adjustViewBounds="false"
        android:background="#FFFFFF"
        android:baselineAlignBottom="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/file_name_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        app:srcCompat="@drawable/file" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:indeterminate="true"
        android:indeterminateTint="#1a09d6"
        android:max="100"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

</androidx.constraintlayout.widget.ConstraintLayout>